# Aurora

./: .gitignore  README.md  pyproject.toml
data/: db.json
src/aurora/: cli.py  config.py  crud.py  exceptions.py  main.py  schemas.py  storage.py  task.py
src/aurora/routes/: tasks.py
src/aurora/storage/: __init__.py  json_storage.py  protocol.py  sqlite_storage.py
tests/: crud_test.py
