[project]
name = "aurora"
version = "0.1.0"
description = "A project that will grow as his maker discovers new things."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aurora"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
